syntax = "proto3";
package tendermint.abci;

// This file contains types which are copied from
// https://github.com/celestiaorg/cosmos-sdk/blob/v1.18.3-sdk-v0.46.14/proto/tendermint/types/types.proto

// Event allows application developers to attach additional information to
// ResponseBeginBlock, ResponseEndBlock, ResponseCheckTx and ResponseDeliverTx.
// Later, transactions may be queried using these events.
message Event {
  string type = 1;
  repeated EventAttribute attributes = 2;
}

// EventAttribute is a single key-value pair, associated with an event.
message EventAttribute {
  bytes key = 1;
  bytes value = 2;
  bool index = 3; // nondeterministic
}
